<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">ORDER</string>
    <string name="orderSummary_textView">Order Summary</string>
    <string name="min_button">-</string>
    <string name="plus_button">+</string>

    <string name="extra_textView">Extra</string>
    <string name="whipedCream_checkbox">Whiped Cream</string>
    <string name="chocolate_checkbox">Chocolate</string>
    <string name="name_edittext">Name</string>

</resources>
